MyOrg2022/force-app/main/default/objects/CustomMetaDataTest2__mdt/CustomMetaDataTest2__mdt.object-meta.xml
<CustomObject>
    <label>CustomMetaDataTest2</label>
    <pluralLabel>CustomMetaDataTest2s</pluralLabel>
</CustomObject>