MyOrg2022/force-app/main/default/objects/CustomMetaDataTest2__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>CustomMetaDataTest2s</relationshipLabel>
    <relationshipName>CustomMetaDataTest2s</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>