MyOrg2022/force-app/main/default/objects/CustomMetaDataTest2__mdt/fields/Field_Definition__c.field-meta.xml
<CustomField>
    <fullName>Field_Definition__c</fullName>
    <label>Field Definition Example</label>
    <metadataRelationshipControllingField>CustomMetaDataTest2__mdt.Account__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>CustomMetaDataTest2s</relationshipLabel>
    <relationshipName>CustomMetaDataTest2s</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>